--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "chai"
   ],
   "author": "Ranjan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
